constistent use of release